# The-Forge-Lite

./: .gitignore  CMakeLists.txt  README.md  build_linux_vulkan_debug.sh  build_linux_vulkan_release.sh
cmake/modules/: FindD3D11.cmake
include/Renderer/: GpuProfiler.h  IRay.h  IRenderer.h  ResourceLoader.h
include/Renderer/Image/: Image.h  ImageEnums.h
include/Renderer/Interfaces/: IApp.h  IFileSystem.h  ILog.h  ILogManager.h  IMemoryManager.h  IOperatingSystem.h  IPlatformEvents.h  IProfiler.h  IThread.h  ITimeManager.h
src/Examples/01_Transformations/: 01_Transformations.cpp
src/Examples/Camera/: FpsCameraController.cpp  GuiCameraController.cpp
src/Examples/Camera/Interfaces/: ICameraController.h
src/Examples/Input/: InputMappings.h  InputSystem.cpp  InputSystem.h
src/Middleware/Text/: Fontstash.cpp  Fontstash.h
src/Middleware/UI/: AppUI.cpp  AppUI.h  ImguiGUIDriver.cpp  imgui_user.cpp  imgui_user.h
src/OS/Android/: AndroidBase.cpp  AndroidFileSystem.cpp  AndroidLog.cpp  AndroidLogManager.cpp  AndroidThread.cpp  AndroidThreadManager.cpp
src/OS/Core/: Atomics.h  FileSystem.cpp  GPUConfig.h  PlatformEvents.cpp  RingBuffer.h  ThreadSystem.cpp  Timer.cpp
src/OS/Image/: Image.cpp  Image.h
src/OS/Linux/: LinuxBase.cpp  LinuxFileSystem.cpp  LinuxLog.cpp  LinuxLogManager.cpp  LinuxThread.cpp  LinuxThreadManager.cpp
src/OS/Logging/: Log.cpp  Log.h  LogManager.cpp  LogManager.h
src/OS/Math/: MathTypes.h
src/OS/MemoryTracking/: MemoryTrackingManager.cpp
src/OS/Windows/: WindowsBase.cpp  WindowsFileSystem.cpp  WindowsLog.cpp  WindowsLogManager.cpp  WindowsThread.cpp  WindowsThreadManager.cpp
src/OS/iOS/: iOSBase.cpp  iOSBase.mm  iOSFileSystem.mm  iOSLogManager.cpp  iOSThread.cpp  iOSThreadManager.cpp
src/OS/macOS/: macOSBase.mm  macOSFileSystem.mm  macOSLog.cpp  macOSThreadManager.cpp
src/Renderer/: CommonShaderReflection.cpp  GpuProfiler.cpp  ResourceLoader.cpp
src/Renderer/Direct3D11/: Direct3D11.cpp  Direct3D11Commands.h  Direct3D11Raytracing.cpp  Direct3D11ShaderReflection.cpp
src/Renderer/Direct3D12/: Direct3D12.cpp  Direct3D12Hooks.cpp  Direct3D12MemoryAllocator.cpp  Direct3D12MemoryAllocator.h  Direct3D12Raytracing.cpp  Direct3D12ShaderReflection.cpp
src/Renderer/Metal/: MetalMemoryAllocator.h  MetalRaytracing.mm  MetalRenderer.mm  MetalShaderReflection.mm
src/Renderer/Vulkan/: Vulkan.cpp  VulkanRaytracing.cpp  VulkanShaderReflection.cpp
src/Tools/Profiler/: Profiler.cpp  ProfilerBase.cpp  ProfilerBase.h  ProfilerDirect3D11.cpp  ProfilerDirect3D12.cpp  ProfilerInput.cpp  ProfilerUI.cpp  ProfilerVulkan.cpp
src/Tools/SpirvTools/: SpirvTools.cpp
